# utility-raspberry-pi-image-builder

./: .gitignore  AGENTS.md  KNOWN-ISSUES.md  LINUX-TEST-REPORT.md  PHASE1-COMPLETION.md  PRODUCTION-READINESS-ASSESSMENT.md  README.md  REGISTRY.md  RELEASE-NOTES-v1.0.md  REMAINING_TASKS.md  REMOTE-DEV-WORKFLOW.md  SETUP-REMOTE-DEV.md  SPEC.md  TASK5-INTEGRATION-BUG-REPORT.md  TASK5-INTEGRATION-TEST-REPORT.md  TASK_12_COMPLETION_REPORT.md  TASK_5_COMPLETION_REPORT.md  TASK_5_INTEGRATION_TEST_REPORT.md  build-rpi-image.sh  build-rpi-image.sh.backup  config.yaml  debug-integration.sh  debug-script.sh  debug-ultra.sh  debug_keyboard2.py  pyproject.toml  test-cloud-init.yaml
lib/: AGENTS.md  README.md  chroot-utils.sh  horizon-install.sh  image-mount.sh  image-verify.sh  network-config.sh  platform-detect.sh
samples/: network-config-example.yaml  network-static-ip-example.yaml  ssh-keys-example.yaml  static-ip-example.yaml  wifi-example.yaml
src/rpi_burner/: __init__.py  cli.py  cloud_init.py  disk_detector.py  disk_writer.py  exceptions.py  models.py
src/rpi_burner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: README.md  basic-integration.sh  helpers.bats  setup.bash  task-11.1-completion-summary.md  validate-tests.sh
test/integration/: run-integration-tests.sh
test/property/: test-core-properties.bats  test-exchange-properties.bats  test-registry-properties.bats  test-validation-properties.bats
test/unit/: test-cli.bats
tests/: test_backend_linux.py  test_cloud_init.py  test_disk_detector.py
(+7 files in other folders)
